--- a/index.html
+++ b/index.html
@@ -135,22 +135,20 @@
 
     </div>
 </section>
-<section class="cta-container">
-    <div class="cta-card">
-        <div class="cta-info">
-            <h2>Let’s make things happen</h2>
-            <p>Contact us today to learn more about how our digital marketing services can help your business grow and succeed online.</p>
-            <button class="cta-btn">Get your free proposal</button>
-        </div>
-        <div class="cta-visual">
-            <div class="shape circle-black"></div>
-            <div class="shape star-white"></div>
-            <div class="shape star-grey"></div>
-            <div class="shape diamond-lime"></div>
+<section class="cta-section">
+    <div class="cta-container">
+        <div class="card">
+            <div class="card-content">
+                <h2>Let’s make things happen</h2>
+                <p>Contact us today to learn more about how our digital marketing services can help your business grow and succeed online.</p>
+                <a href="#" class="btn">Get your free proposal</a>
+            </div>
+            <div class="card-image">
+                <img src="images/images/Illustration (3).png" alt="Illustration">
+            </div>
         </div>
     </div>
 </section>
-
 <section class="case-studies-container">
     <div class="section-heading">
         <span class="label-green">Case Studies</span>
@@ -380,5 +378,18 @@
             <button class="btn-all">See all team</button>
         </div>
     </section>
-</body> 
+   <div class="container">
+    <div class="cards-wrapper"> ... </div>
+
+    <div class="testimonial-header">
+        <h2 class="badge">Testimonials</h2>
+        <p class="description">
+            Hear from Our Satisfied Clients: Read Our Testimonials <br>
+            to Learn More about Our Digital Marketing Services
+        </p>
+    </div>
+</div>
+
+
+</body>
 </html>
