--- a/index.html
+++ b/index.html
@@ -15,14 +15,20 @@
             <div class="logo">
                 <span class="logo-icon">✦</span> Positivus
             </div>
-            <ul class="nav-links">
+            <div class="hamburger" id="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <ul class="nav-links" id="nav-menu">
                 <li><a href="#">About us</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Use Cases</a></li>
                 <li><a href="#">Pricing</a></li>
                 <li><a href="#">Blog</a></li>
+                <li><a href="#" class="btn-outline btn-mobile">Request a quote</a></li>
             </ul>
-            <a href="#" class="btn-outline">Request a quote</a>
+            <a href="#" class="btn-outline btn-desktop">Request a quote</a>
         </nav>
     </header>
 
